# fedora-galaxy-book-camera

./: Cargo.toml  Containerfile  Makefile  README.en.md  README.es.md  README.it.md  README.md
data/: com.caioregis.GalaxyBookCamera.desktop  com.caioregis.GalaxyBookCamera.metainfo.xml
data/libcamera/simple/: ov02c10.yaml
packaging/fedora/: galaxybook-camera.spec
po/: en.po  es.po  galaxybook-camera.pot  it.po
scripts/: install-galaxybook-camera-launcher.sh
src/: lib.rs  main.rs  updates.rs
src/app/: config.rs  localization.rs  mod.rs  paths.rs  singleton.rs
src/camera/: capture.rs  mod.rs  worker.rs
src/image/: adjustments.rs  mod.rs
src/media/: audio.rs  ffmpeg.rs
src/ui/: about.rs  builders.rs  controls.rs  mod.rs  sidebar.rs  styles.rs  window.rs  zoom.rs
src/ui/window/: bindings.rs  capture.rs  events.rs  lifecycle.rs  updates.rs
